--- a/index.html
+++ b/index.html
@@ -2,21 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.63a26457.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.f561f219.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.2df7efe2.js">
-    <link rel="stylesheet" href="/assets/index.f386b97c.css">
   </head>
   <body>
     <div id="root"></div>
-    
+    hello
   </body>
 </html>
