--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.63a26457.svg" />
+    <link rel="icon" type="image/svg+xml" href="/pokedex/assets/favicon.63a26457.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,9 +11,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.d2c34c81.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.2f1de496.js">
-    <link rel="stylesheet" href="/assets/index.f386b97c.css">
+    <script type="module" crossorigin src="/pokedex/assets/index.d2c34c81.js"></script>
+    <link rel="modulepreload" href="/pokedex/assets/vendor.2f1de496.js">
+    <link rel="stylesheet" href="/pokedex/assets/index.f386b97c.css">
   </head>
   <body>
     <div id="root"></div>
